* Renamed properties of Transaction to follow the norm
* Add support for ING specific description format

Version 0.1 - 2014-06-25
* Initial release