@@ -14,3 +14,4 @@ VIDED
 DATA
 :61:171214C15,67TIDXTEST//REFERENCE
 :62F:C120514EUR5638,62
+:86:/SUM/
