@@ -1,3 +1,4 @@
+* Add Statement description
 * Renamed properties of Transaction to follow the norm
 * Add support for ING specific description format
 
